Footer, icons and visibility fixes

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,7 @@ h3 {
 li {
   margin-left: 2rem;
 }
+
+a{
+  text-decoration: none;
+}
